# student-manager

./: CMakeLists.txt  README.md  datamanager.cpp  datamanager.h  main.cpp  mainwindow.cpp  mainwindow.h  student.cpp  student.h
